font-family changed

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <img src="https://media.istockphoto.com/id/673723668/photo/handsome-auto-service-workers.jpg?s=2048x2048&w=is&k=20&c=kmgTQsG-uQzh8T_u5O49vsGBS2zlrUtKK18i9VRf8l0=" alt="">
 
                 <h4>Front End</h4>
-                <p>commodi blanditiis alias, earum, cumque ea aspernatur exercitationem, illum quam nesciunt hic velit consequuntur voluptates eaque necessitatibus accusantium maxime error perspiciatis sequi recusandae. Assumenda recusandae nesciunt voluptates iste.
+                <p style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">commodi blanditiis alias, earum, cumque ea aspernatur exercitationem, illum quam nesciunt hic velit consequuntur voluptates eaque necessitatibus accusantium maxime error perspiciatis sequi recusandae. Assumenda recusandae nesciunt voluptates iste.
                 Minus earum, velit ex eius iusto quia odio aut deleniti sequi ipsum dicta. Officia eligendi accusantium sed facere laborum incidunt a hic laudantium, dolores expedita cumque, unde in aliquid! Nesciunt.</p>
 
             </div>
